# backend

./: .gitignore  Dockerfile  README.md  alembic.ini  clean.sh  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml
api/controllers/: books.py  loans.py  users.py
api/dtos/: book_dto.py  loan_dto.py  loginDto.py  login_dto.py
api/services/: book_service.py
books/application/: book_availability_facade.py
books/domain/: book.py  book_availability.py  book_availability_builder.py  book_availability_reader.py  book_availability_store.py  book_copy.py  book_copy_repository.py  book_embedding_repository.py  book_repository.py  book_search_criteria.py  result_page.py  semantic_query.py
books/infrastructure/: di.py
chatbot/application/: ports.py
chatbot/domain/: conversation.py  tools.py  (+2 more)
core/: auth_guard.py  exceptions.py  security.py  validators.py
db/: connection.py
dependencies/: infrastructure.py  orchestrator.py  repositories.py  services.py  uow.py
docs/: loans.md  redis_y_cambios_en_infraestructura.md
domain/: book.py  book_copy.py  loan.py  solicitud_libro.py  user.py
migrations/: env.py
orchestrator/: BorrowingOrchestrator.py  borrowing_orchestrator.py
repositories/: book_copy_repository.py  book_embedding_repository.py  book_repository.py  loan_repository.py  solicitud_libro_repository.py  user_repository.py
services/: auth_service.py  book_service.py  borrowing_service.py  loan_service.py  queue_service.py
tests/: conftest.py  test_auth_service.py  test_book_repository.py  test_endpoints.py
uow/: ApplicationUOW.py  RedisUOW.py
(+236 files in other folders)
