[project]
name = "backendlookowl"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "bcrypt>=5.0.0",
    "fastapi[standard]>=0.136.1",
    "pgvector>=0.4.2",
    "psycopg[binary,pool]>=3.3.3",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "pyjwt>=2.12.1",
    "pytest>=9.0.3",
    "pytest-anyio",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.5.1",
    "redis>=8.0.0",
    "sqlalchemy>=2.0.49",
    "aiosqlite>=0.22.1",
    "pytest-asyncio>=1.4.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"